# relicense

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: cleanup-branch.yml  update.yml
relicense/: cli.py
relicense/templates/: 0BSD.template  AAL.template  AFL-1.1.template  AFL-1.2.template  AFL-2.0.template  AFL-2.1.template  AFL-3.0.template  AGPL-3.0-only.template  APL-1.0.template  APSL-1.2.template  APSL-2.0.template  Apache-1.1.template  Apache-2.0.template  Artistic-1.0-Perl.template  Artistic-1.0-cl8.template  Artistic-1.0.template  Artistic-2.0.template  BSD-1-Clause.template  BSD-2-Clause-Patent.template  BSD-2-Clause.template  BSD-3-Clause-Clear.template  BSD-3-Clause-LBNL.template  BSD-3-Clause.template  BSD-4-Clause.template  BitTorrent-1.1.template  CAL-1.0.template  CATOSL-1.1.template  CC-BY-2.0.template  CC-BY-2.5-AU.template  CC-BY-3.0-AT.template  CC-BY-3.0-AU.template  CC-BY-3.0-DE.template  CC-BY-3.0-IGO.template  CC-BY-3.0-NL.template  CC-BY-3.0-US.template  CC-BY-4.0.template  CC-BY-NC-2.5.template  CC-BY-NC-3.0-DE.template  CC-BY-NC-4.0.template  CC-BY-NC-ND-1.0.template  (+125 more)
scripts/: cleanup-templates.py  preformat-licenses.py  update-collections.py
src/relicense/: __init__.py  _metadata.py  cli.py
src/relicense/templates/: 0BSD.template  AAL.template  AFL-1.2.template  AFL-2.1.template  AFL-3.0.template  AGPL-3.0-or-later.template  ALGLIB-Documentation.template  APSL-1.0.template  APSL-1.1.template  Apache-1.0.template  Artistic-2.0.template  BSL-1.0.template  CC-BY-1.0.template  CC-BY-2.5.template  CC-BY-NC-1.0.template  CC-BY-NC-2.0.template  CC-BY-NC-ND-2.5.template  CC-BY-NC-SA-2.0.template  CC-BY-NC-SA-2.5.template  CC-BY-SA-1.0.template  CC-BY-SA-2.0.template  CC-PDM-1.0.template  CDDL-1.0.template  CNRI-Python.template  CPAL-1.0.template  CUA-OPL-1.0.template  ECL-1.0.template  ECL-2.0.template  EPL-2.0.template  FSFAP.template  Frameworx-1.0.template  GFDL-1.2-or-later.template  GFDL-1.3-or-later.template  GPL-2.0-or-later.template  IPA.template  LPL-1.0.template  LPPL-1.2.template  LPPL-1.3c.template  LiLiQ-P-1.1.template  MIT-0.template  (+35 more)
