[project]
name = "relicense"
version = "0.1.0"
description = "A tool for quickly generating license files for any project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.1",
]

[project.scripts]
relicense = "relicense.cli:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "relicense"
module-root = ""
