[project]
name = "relicense"
dynamic = ["version"]
description = "A tool for quickly generating license files for any project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.16.1",
]

[project.scripts]
relicense = "relicense.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "code"
path = "src/relicense/__init__.py"
search-paths = ["src"]
